[package]
name = "yaminabe-launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true


[lib]
name = "yaminabe_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

