[package]
name = "src-ui"
description = "UI Package for Yaminabe Modpack Creator"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
